added Bootstrap LESS

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -1,5 +1,11 @@
-@color: #4D926F;
+@import "bootstrap/bootstrap.less";
+
+// variables
+
+@heading-color: #4D926F;
+
+// styles
 
 h1 {
-  color: @color;
+  color: @heading-color;
 }
